--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body style="margin: 0">
+  <body>
     <nav class="navbar">
       <h1 class="headerlogo">Header Logo</h1>
 
@@ -32,6 +32,41 @@
           src="https://images.unsplash.com/photo-1716524608128-415870d0d6d2?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="very cool nature pic"
         />
+      </div>
+    </div>
+
+    <div class="info">
+      <h1>Some Random Info.</h1>
+
+      <div class="infoimg">
+        <div>
+          <img
+            src="https://plus.unsplash.com/premium_vector-1715786847762-e4f0299602bf?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="flower pic"
+          />
+          <p>Flower pic very cool yes.</p>
+        </div>
+        <div>
+          <img
+            src="https://plus.unsplash.com/premium_vector-1715786847762-e4f0299602bf?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="flower pic"
+          />
+          <p>Flower pic very cool yes.</p>
+        </div>
+        <div>
+          <img
+            src="https://plus.unsplash.com/premium_vector-1715786847762-e4f0299602bf?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="flower pic"
+          />
+          <p>Flower pic very cool yes.</p>
+        </div>
+        <div>
+          <img
+            src="https://plus.unsplash.com/premium_vector-1715786847762-e4f0299602bf?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="flower pic"
+          />
+          <p>Flower pic very cool yes.</p>
+        </div>
       </div>
     </div>
   </body>
