Added Quote, Call to action and footer section of the webpage.

--- a/index.html
+++ b/index.html
@@ -69,5 +69,22 @@
         </div>
       </div>
     </div>
+
+    <div class="quote">
+      <h1>"A sailor cannot command the wind, but he can adjust his sails."</h1>
+      <p>- Nazir the wanderer.</p>
+    </div>
+
+    <div class="call">
+      <div class="bgbox">
+        <div>
+          <h1>Call to action! It's time!</h1>
+          <p>Sign up here.</p>
+        </div>
+        <button>Sign Up</button>
+      </div>
+    </div>
+
+    <div class="footer">Copyright @ wanderingnazir 2024</div>
   </body>
 </html>
